// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table renders empty table 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="8"
                  >
                    <div
                      class="css-var-root g-empty g-empty-normal"
                    >
                      <div
                        class="g-empty-image"
                      >
                        <svg
                          height="41"
                          viewBox="0 0 64 41"
                          width="64"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            No data
                          </title>
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            transform="translate(0 1)"
                          >
                            <ellipse
                              cx="32"
                              cy="33"
                              fill="#f5f5f5"
                              rx="32"
                              ry="7"
                            />
                            <g
                              fill-rule="nonzero"
                              stroke="#d9d9d9"
                            >
                              <path
                                d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                              />
                              <path
                                d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                                fill="#fafafa"
                              />
                            </g>
                          </g>
                        </svg>
                      </div>
                      <div
                        class="g-empty-description"
                      >
                        No data
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table when emptyText is null 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="8"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="8"
                  >
                    custom empty text
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns should work 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var g-table-fix-start-shadow g-table-fix-end-shadow g-table-fixed-column g-table-scroll-horizontal g-table-has-fix-start g-table-has-fix-end"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
            style="overflow-x: auto; overflow-y: hidden;"
          >
            <table
              style="width: 1px; min-width: 100%; table-layout: fixed;"
            >
              <colgroup>
                <col
                  style="width: 100px;"
                />
                <col
                  style="width: 100px;"
                />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col
                  style="width: 100px;"
                />
              </colgroup>
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell g-table-cell-fix g-table-cell-fix-start"
                    scope="col"
                    style="inset-inline-start: 0; --z-offset: 22; --z-offset-reverse: 11;"
                  >
                    Full Name
                  </th>
                  <th
                    class="g-table-cell g-table-cell-fix g-table-cell-fix-start g-table-cell-fix-start-shadow"
                    scope="col"
                    style="inset-inline-start: 0; --z-offset: 21; --z-offset-reverse: 12;"
                  >
                    Age
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                  <th
                    class="g-table-cell g-table-cell-fix g-table-cell-fix-end g-table-cell-fix-end-shadow"
                    scope="col"
                    style="inset-inline-end: 0; --z-offset: 10; --z-offset-reverse: 1;"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="g-table-measure-row"
                  style="height: 0px;"
                >
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Full Name
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Age
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 1
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 2
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 3
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 4
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 5
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 6
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 7
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Column 8
                    </div>
                  </td>
                  <td
                    style="padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-bottom: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden; font-weight: bold;"
                    >
                      Action
                    </div>
                  </td>
                </tr>
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="11"
                  >
                    <div
                      class="g-table-expanded-row-fixed"
                      style="width: 1000px; position: sticky; left: 0px; overflow: hidden;"
                    >
                      <div
                        class="css-var-root g-empty g-empty-normal"
                      >
                        <div
                          class="g-empty-image"
                        >
                          <svg
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              No data
                            </title>
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                cx="32"
                                cy="33"
                                fill="#f5f5f5"
                                rx="32"
                                ry="7"
                              />
                              <g
                                fill-rule="nonzero"
                                stroke="#d9d9d9"
                              >
                                <path
                                  d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                                />
                                <path
                                  d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                                  fill="#fafafa"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <div
                          class="g-empty-description"
                        >
                          No data
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning css-var-root"
  >
    <div
      class="g-spin-section"
    >
      <span
        class="g-spin-dot-holder"
      >
        <span
          class="g-spin-dot g-spin-dot-spin"
        >
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
        </span>
      </span>
    </div>
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="8"
                  >
                    <div
                      class="css-var-root g-empty g-empty-normal"
                    >
                      <div
                        class="g-empty-image"
                      >
                        <svg
                          height="41"
                          viewBox="0 0 64 41"
                          width="64"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            No data
                          </title>
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            transform="translate(0 1)"
                          >
                            <ellipse
                              cx="32"
                              cy="33"
                              fill="#f5f5f5"
                              rx="32"
                              ry="7"
                            />
                            <g
                              fill-rule="nonzero"
                              stroke="#d9d9d9"
                            >
                              <path
                                d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                              />
                              <path
                                d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                                fill="#fafafa"
                              />
                            </g>
                          </g>
                        </svg>
                      </div>
                      <div
                        class="g-empty-description"
                      >
                        No data
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table should not render empty when loading 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning css-var-root"
  >
    <div
      class="g-spin-section"
    >
      <span
        class="g-spin-dot-holder"
      >
        <span
          class="g-spin-dot g-spin-dot-spin"
        >
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
        </span>
      </span>
    </div>
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 1
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 2
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 3
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 4
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 5
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 6
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 7
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                    colspan="8"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
